--- a/index.html
+++ b/index.html
@@ -28,22 +28,26 @@
   <tr>
     <th>نام محصول</th>
     <th>قیمت واحد (تومان)</th>
-    <th>آبی</th>
-    <th>زرد</th>
-    <th>قرمز</th>
-    <th>زرشکی</th>
-    <th>سورمه‌ای</th>
+    <th>Off white</th>
+    <th>Midnight blue</th>
+    <th>Evergreen</th>
+    <th>Sky steel</th>
+    <th>Golden Amber</th>
+    <th>Warm cream</th>
     <th>جمع ردیف</th>
   </tr>
 </thead>
 <tbody id="product-table">
   <tr data-price="125000">
-    <td>ماگ شیار دار</td>
+    <td>بشقاب غذا خوری قطر ۲۵</td>
     <td>125000</td>
-    <td><input type="number" name="ماگ شیار دار-آبی" min="0" value="0" onchange="updateTotal()" /></td>
-    <td><input type="number" name="ماگ شیار دار-زرد" min="0" value="0" onchange="updateTotal()" /></td>
-    <td><input type="number" name="ماگ شیار دار-قرمز" min="0" value="0" onchange="updateTotal()" /></td>
-    <td></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+        <td></td>
     <td></td>
     <td class="row-total">0</td>
   </tr>
