--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </tr>
 </thead>
 <tbody id="product-table">
-  <tr data-price="125000">
+  <tr data-price="520000">
     <td>بشقاب غذا خوری قطر ۲۵</td>
     <td>125000</td>
     <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Off white" min="0" value="0" onchange="updateTotal()" /></td>
@@ -47,18 +47,28 @@
     <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
     <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
     <td><input type="number" name="بشقاب غذا خوری قطر ۲۵-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
-        <td></td>
-    <td></td>
     <td class="row-total">0</td>
   </tr>
-  <tr data-price="175000">
-    <td>ماگ لاستر</td>
-    <td>175000</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td><input type="number" name="ماگ لاستر-زرشکی" min="0" value="0" onchange="updateTotal()" /></td>
-    <td><input type="number" name="ماگ لاستر-سورمه‌ای" min="0" value="0" onchange="updateTotal()" /></td>
+  <tr data-price="335000">
+    <td>پیش دستی قطر ۱۸ </td>
+    <td>125000</td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="پیش دستی قطر ۱۸ -Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
+    <td class="row-total">0</td>
+  </tr>
+  <tr data-price="450000">
+    <td>بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا</td>
+    <td>125000</td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Off white" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Midnight blue" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Evergreen" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Sky steele" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Golden Amber" min="0" value="0" onchange="updateTotal()" /></td>
+    <td><input type="number" name="بشقاب گود قطر ۲۱ مناسب خورشت یا پاستا-Warm cream" min="0" value="0" onchange="updateTotal()" /></td>
     <td class="row-total">0</td>
   </tr>
 </tbody>
