--- a/index.html
+++ b/index.html
@@ -355,57 +355,58 @@
     updateTotal();
   }
   let isSubmitting = false;  // متغیر برای پیگیری ارسال فرم
-  function submitForm(e) {
+ // ارسال سفارش به واتساپ پس از ثبت
+function submitForm(e) {
     e.preventDefault();
 
-    if (isSubmitting) return; // اگر در حال ارسال است، از ارسال دوباره جلوگیری کن
-    isSubmitting = true;  // تغییر وضعیت ارسال به true
-    
+    if (isSubmitting) return; 
+    isSubmitting = true;
+
     const fullName = document.getElementById("fullName").value.trim();
     const phone = document.getElementById("phone").value.trim();
     const address = document.getElementById("address").value.trim();
 
     if (!fullName || !phone || !address) {
-      alert("لطفاً نام، شماره تماس و آدرس را کامل وارد کنید.");
-      return;
+        alert("لطفاً نام، شماره تماس و آدرس را کامل وارد کنید.");
+        return;
     }
 
-    
-  const formData = new FormData();
-  formData.append("name", fullName);
-  formData.append("phone", phone);
-  formData.append("productList", order.join(" | "));
-  formData.append("color1", document.querySelector('[name="color1"]').value);
-  formData.append("color2", document.querySelector('[name="color2"]').value);
-  formData.append("color3", document.querySelector('[name="color3"]').value);
-  formData.append("color4", document.querySelector('[name="color4"]').value);
-  formData.append("color5", document.querySelector('[name="color5"]').value);
-  formData.append("color6", document.querySelector('[name="color6"]').value);
-  formData.append("total", raw);
-  formData.append("discount", discount);
-  formData.append("lasttotal", final);
-  formData.append("add", address);
+    const rawTotal = parseInt(document.getElementById("raw-total").textContent.replace(/,/g, ''));
+    const discount = parseInt(document.getElementById("discount-amount").textContent.replace(/,/g, ''));
+    const finalTotal = parseInt(document.getElementById("final-total").textContent.replace(/,/g, ''));
 
-  // ارسال درخواست POST به اسکریپت گوگل
-  fetch('https://script.google.com/macros/s/AKfycbyLdrrkWYf56UADatuwh-WkaTQ87uffGBz34UTVTeZ2suvURT1Yc3LY8CQSSYJIaWlv/exec', {
-    method: 'POST',
-    body: formData
-  })
-  .then(response => response.text())
-  .then(data => {
-    console.log('Success:', data);
-    alert('سفارش با موفقیت ثبت شد!');
-  })
-  .catch(error => {
-    console.error('Error:', error);
-    alert('خطا در ارسال سفارش!');
-  });
+    const order = [];
+    document.querySelectorAll("#product-table tr").forEach(row => {
+        const productName = row.querySelector("td:first-child").textContent;
+        const rowTotal = row.querySelector(".row-total").textContent;
+        order.push(`${productName}: ${rowTotal}`);
+    });
+
+    const formData = new FormData();
+    formData.append("name", fullName);
+    formData.append("phone", phone);
+    formData.append("productList", order.join(" | "));
+    formData.append("total", rawTotal);
+    formData.append("discount", discount);
+    formData.append("finalTotal", finalTotal);
+    formData.append("address", address);
+
+    // ارسال به گوگل اسکریپت
+    fetch(scriptURL, { method: 'POST', body: formData })
+        .then(response => response.text())
+        .then(data => {
+            alert('سفارش با موفقیت ثبت شد!');
+            // ارسال به واتساپ در صورت انتخاب
+            if (document.getElementById("send-whatsapp").checked) {
+                sendToWhatsApp(fullName, phone, order, rawTotal, discount, finalTotal, address);
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            alert('خطا در ارسال سفارش!');
+        });
 }
-
-
-
-
-  function sendToWhatsApp(fullName, phone, order, raw, discount, final, address) {
+function sendToWhatsApp(fullName, phone, order, raw, discount, final, address) {
     let message = `📦 سفارش PerlaPots:\nنام: ${fullName}\nشماره: ${phone}\n`;
     message += order.map(x => "- " + x).join("\n");
     message += `\n\nجمع کل: ${raw} تومان`;
